cmake_minimum_required(VERSION 3.15)
project(modern_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Hafta-01-01-Vector Hafta-01/01-vector/main.cpp Hafta-01/01-vector/sinif.cpp Hafta-01/01-vector/sinif.h)

add_executable(Hafta-01-02-Chat Hafta-01/02-Chat/main.cpp Hafta-01/02-Chat/chat_sinif.cpp Hafta-01/02-Chat/chat_sinif.h)

add_executable(Hafta-01-03-Animals Hafta-01/03-Animals/main.cpp Hafta-01/03-Animals/Animal.cpp Hafta-01/03-Animals/Animal.h Hafta-01/03-Animals/Cat.cpp Hafta-01/03-Animals/Cat.h Hafta-01/03-Animals/Dog.cpp Hafta-01/03-Animals/Dog.h)

add_executable(Hafta-02-01-Virtual_Functions Hafta-02/01-Virtual_Functions/main.cpp Hafta-02/01-Virtual_Functions/insan.cpp Hafta-02/01-Virtual_Functions/insan.h)

add_executable(Hafta-02-02-Pure_Virtual_Functions Hafta-02/02-Pure_Virtual_Functions/main.cpp Hafta-02/02-Pure_Virtual_Functions/insan.cpp Hafta-02/02-Pure_Virtual_Functions/insan.h)

add_executable(Hafta-02-03-Abstract Hafta-02/03-Abstract/main.cpp Hafta-02/03-Abstract/sinif.cpp Hafta-02/03-Abstract/sinif.h)

add_executable(Hafta-02-04-Templates Hafta-02/04-Templates/main.cpp)

add_executable(Hafta-02-05-Move_Semantics Hafta-02/05-Move_Semantics/main.cpp Hafta-02/05-Move_Semantics/ornek.cpp)

add_executable(Hafta-02-06-Shared_Pointer Hafta-02/06-Shared_Pointer/main.cpp)

